# BioStatusIA

./: .gitignore  CLAUDE.md  README.md  dashboard_inteligencia_medica.html  dossie_comparativo_biostatsia.html  pyproject.toml  relatorio_final_biostatsia.html  relatorio_tecnico_biostatsia.html  requirements.txt  template_moderno.html  template_relatorio.html  template_relatorio_prontuario.html  template_relatorio_relatorioSimples.html
dataset_teste_csv/: wbcd_50.csv
docs/: documentacao_notion.md
src/biostatusia/: app.py  crew.py  database.py  main.py
src/biostatusia/config/: agents.yaml  tasks.yaml
src/biostatusia/pipeline/: analise_base.py  avaliacao_modelos.py  classificador.py  dados_tabulares.py  extracao.py  extracao_audio.py  extracao_dicom.py  extracao_temporal.py  extracao_video.py  extracao_volumetrica.py  io_sinais.py  io_utils.py  leitura_audio.py  leitura_dicom.py  leitura_temporal.py  leitura_video.py  leitura_volumetrica.py  preprocessamento.py  segmentacao.py
src/biostatusia/templates/: tela1_upload.html  tela2_resultados.html
src/biostatusia/tools/: analise_base_tool.py  audio_biomedico_tool.py  custom_tool.py  dicom_tool.py  extracao_tool.py  sinais_temporais_tool.py  tabular_tool.py  treino_tool.py  video_medico_tool.py  volumetrico_tool.py
