[project]
name = "biostatsia"
version = "0.1.0"
description = "biostatsIA using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.4"
]

[project.scripts]
biostatsia = "biostatsia.main:run"
run_crew = "biostatsia.main:run"
train = "biostatsia.main:train"
replay = "biostatsia.main:replay"
test = "biostatsia.main:test"
run_with_trigger = "biostatsia.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
