[project]
name = "biostatusia"
version = "0.1.0"
description = "BioStatusIA - Laudos Radiológicos com CrewAI + Ollama"
authors = [{ name = "BioStatusIA", email = "ias.pesquisas2026@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.203.1,<1.0.0",
    "opencv-python-headless>=4.9.0",
    "scikit-image>=0.22.0",
    "numpy>=1.21.0,<2.0.0",
    "scipy>=1.6.1",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "kagglehub>=0.2.0",
    "markdown>=3.6",
    "python-dotenv>=1.0.0",
    "flask>=3.0.0",
    "scikit-learn>=1.3.0",
    "mne>=1.12.1",
    "wfdb>=4.3.1",
    "pydicom>=3.0.2",
    "nibabel>=5.4.2",
    "simpleitk>=2.5.5",
    "librosa>=0.11.0",
    "soundfile>=0.14.0",
]

[project.scripts]
biostatsia     = "biostatusia.main:run"
run_crew       = "biostatusia.main:run"
biostatsia-web = "biostatusia.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
